k8s/deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katalog-destinacij-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: katalog-destinacij
  template:
    metadata:
      labels:
        app: katalog-destinacij
    spec:
      containers:
        - image: rso/katalog #to be changed
          name: katalog
          ports:
            - containerPort: 8080
              name: server
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3

---

apiVersion: v1
kind: Service
metadata:
  name: katalog-destinacij-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: katalog-destinacij
